# wc-clone

./: .clang-format  .gitignore  .pre-commit-config.yaml  meson.build
src/: lib.c  lib.h  main.c
tests/: integration.c  test.c  unit.c
